--- a/web/src/components/TeacherItem/styles.css
+++ b/web/src/components/TeacherItem/styles.css
@@ -63,7 +63,7 @@
 	display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
 	width: 20rem;
 	height: 5.6rem;
 	background: var(--color-secondary);
@@ -76,9 +76,10 @@
 	align-items: center;
 	justify-content: space-evenly;
 	transition: 0.4s;
+	text-decoration: none;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer a:hover {
 	background: var(--color-secondary-dark);
 }
 
